# shatranj

./: Cargo.toml  README.md
benches/: bench.rs  profiled.rs
src/: lib.rs  main.rs
