[package]
name = "shatranj"
version = "0.1.0"
edition = "2021"

[dependencies]
pgn-reader = "0.26.0"
config = "0.14.0"
libc = "0.2.154"
memmap2 = "0.9.4"
io-uring = "0.6.4"
cargo-heaptrack = "0.1.0"

[dev-dependencies]
criterion = { version="0.5.1" , features = ["html_reports"]}

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "profiled"
harness = false